@@ -1,5 +1,10 @@
 2011-05-13  Ivan Maidanski  <ivmai@mail.ru>
 
+	* tests/threadkey_test.c (LIMIT): Use smaller value (don't create
+	more than 30 in parallel by default).
+
+2011-05-13  Ivan Maidanski  <ivmai@mail.ru>
+
 	* tests/threadkey_test.c (key_once, main): Work around for Solaris
 	PTHREAD_ONCE_INIT.
 	* tests/threadkey_test.c (LIMIT): Use smaller value for Solaris.
